--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <title> zehn.github.io </title>
   </head>
 <body>
+  <div class="header_page">
+  </div>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>小庆庆~明天见~</p>
+  <footer>
+  </footer>
 </body>
 </html>
