--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> 我们的主页 </title>
+    <title> My Blog </title>
   </head>
 <body>
   <div class="header_page">
   </div>
-<h1>你好～ 马端玉</h1>
+<h1> to be finished ...</h1>
 <p> ...</p>
   <footer>
   </footer>
