--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <div class="header_page">
   </div>
-<h1> to be finished ...</h1>
-<p> ...</p>
+<h1>Echo:Accompany is the longest confession of love. </h1>
+<p></p>
   <footer>
   </footer>
 </body>
